[tool.poetry]
name = "dataprep-ml"
version = "0.0.20"
description = "Automated dataframe analysis for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "dataprep_ml"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1"
pandas = "^2"
pydateinfer = "0.3.0"
python-dateutil = ">=2.1"
scipy = ">=1.7.3"
type-infer = ">=0.0.16"
dataclasses-json = "^0.5.4"
colorlog = "^6.5.0"
pydantic = "^1.10.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
